# codex-tabs

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: faq.md  installation.md  platforms.md  privacy.md  publishing.md  usage.md  use-cases.md
docs/investigations/: thread-name-storage.md
examples/: sessions.toml
src/codex_tabs/: __main__.py  cli.py  codex_state.py  commands.py  display.py  formatting.py  launchers.py  models.py  registry.py  style.py  wizard.py  wt_admin.py
tests/: test_codex_state.py  test_launchers.py  test_registry.py  test_validation.py  test_wizard.py  test_wt_admin.py
